# Hydra

./: .env.example  .gitignore  LICENSE  README.md  RESUMEWORK.md  pyproject.toml
docs/: hydra_mcp_plan.md  multiagent_workflow.md  resume_alert_monitoring.md  tool_catalog.md
profiles/: code_reviewer.yaml  default.yaml
scripts/: hydra_alert_forwarder.py  hydra_diag.py
src/hydra_mcp/: __init__.py  __main__.py  config.py  server.py
src/hydra_mcp/codex/: __init__.py  runner.py  utils.py
src/hydra_mcp/profiles/: __init__.py  loader.py  models.py
src/hydra_mcp/storage/: __init__.py  chroma.py  models.py
src/hydra_mcp/tools/: __init__.py
tests/: test_alert_forwarder.py  test_chroma_store.py  test_cli.py  test_codex_runner.py  test_profiles_loader.py  test_server_resume.py  test_tools.py
