[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "hydra-mcp"
version = "0.1.0"
description = "Hydra MCP server enabling Codex agent orchestration with Chroma-backed memory."
readme = "README.md"
authors = [{name = "Hydra Team"}]
license = {text = "Proprietary"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.12.0,<3.0",
    "modelcontextprotocol>=0.1.0,<0.2.0",
    "chromadb>=0.5.3,<0.6.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<0.28.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "typer[all]>=0.9.0,<0.10.0",
    "rich>=13.7.0,<14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "ruff>=0.5.0,<0.6.0",
    "mypy>=1.10.0,<1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
packages = ["hydra_mcp"]
warn_unused_configs = true
